tests/typecheck/should_fail/T12803.stderr

T12803.hs:9:10: error: [GHC-21572]
    • Illegal instance declaration for ‘C p [q]’:
        The liberal coverage condition fails in class ‘C’
          for functional dependency: ‘a -> b’
        Reason: lhs type ‘p’ does not determine rhs type ‘[q]’
        Un-determined variable: q
    • In the instance declaration for ‘C p [q]’
